--- a/dkms.conf
+++ b/dkms.conf
@@ -1,8 +1,9 @@
 MAKE="make -C kmod/ KDIR=/lib/modules/${kernelver}/build"
 CLEAN="make -C kmod/ clean"
 PACKAGE_NAME=synsanity
-PACKAGE_VERSION=0.1.2
+PACKAGE_VERSION=0.1.3
 REMAKE_INITRD=no
+AUTOINSTALL=yes
 
 BUILT_MODULE_NAME[0]=ipt_SYNSANITY
 DEST_MODULE_LOCATION[0]="/updates"
