--- a/kmod/Makefile
+++ b/kmod/Makefile
@@ -1,4 +1,4 @@
-KDIR?=/usr/src/linux-headers-$(shell uname -r)
+KDIR?=/usr/src/kernels/$(shell uname -r)
 ROOT_DIR:=$(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
 
 obj-m += ipt_SYNSANITY.o xt_syncookies.o xt_condition.o
